--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <div class="container mx-auto px-4 text-center">
             <h1 class="text-4xl md:text-6xl font-extrabold tracking-tight">Alarm Management Course</h1>
             <p class="mt-3 text-xl md:text-2xl font-light">Interactive Course Material Portal (5 Days)</p>
+            <p class="mt-3 text-xl md:text-2xl font-light">Presented by: Ahmed Fathelbab</p>
         </div>
     </div>
 
@@ -81,3 +82,4 @@
 
 </body>
 </html>
+
